# rockville

./: .dockerignore  .gitignore  .prettierignore  .ruff.toml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml  zizmor.yml
k8s/: deployment.yaml
scripts/: gitcalver.sh
src/rockville/: __init__.py  __main__.py  auth.py  bridge.py  cache.py  config.py  convert.py  domain.py  errors.py  log.py  metrics.py  roborock_client.py  status_page.py
tests/: fakes.py  test_auth.py  test_bridge.py  test_cache.py  test_config.py  test_convert.py  test_log.py  test_main.py  test_metrics.py  test_roborock_client.py  test_status_page.py
