[project]
name = "rockville"
version = "0.0.0"
description = "Local-first Roborock-to-MQTT bridge for the Roborock Q5 Max+"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Michael Shields" }]
dependencies = [
    "aiohttp>=3.14.1",
    "aiomqtt>=2.5.1",
    "click>=8.4.1",
    "prometheus-client>=0.25.0",
    "python-roborock>=5.14.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
]

[project.scripts]
rockville = "rockville.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rockville"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["rockville"]

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "@(typing\\.)?overload"]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
